--- a/css/style.css
+++ b/css/style.css
@@ -564,7 +564,7 @@ body {
   margin-top: 0.375rem;
 }
 .mt-16 {
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -1305,6 +1305,10 @@ body {
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
+}
+.py-21 {
+  padding-top: 7rem;
+  padding-bottom: 9rem;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -2982,7 +2986,7 @@ body {
 
 .depoimentos .slide {
   padding: 40px 60px;
-  cursor: grab; 
+  cursor: grab;
 }
 
 .depoimentos .slide:active {
@@ -3027,7 +3031,8 @@ body {
   color: #14281d;
 }
 
-.swiper-button-next:after, .swiper-button-prev:after {
+.swiper-button-next:after,
+.swiper-button-prev:after {
   font-family: swiper-icons;
   font-size: var(--swiper-navigation-size);
   text-transform: none !important;
