--- a/css/style.css
+++ b/css/style.css
@@ -1218,7 +1218,7 @@ body {
 }
 .bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(244 241 235 / var(--tw-bg-opacity, 1));
 }
 .fill-current {
   fill: currentColor;
@@ -3048,4 +3048,19 @@ body {
 
 .swiper-pagination {
   --swiper-theme-color: #14281d;
+}
+
+.bi-instagram::before {
+  content: "\f437";
+  font-size: 32px;
+}
+
+.bi-whatsapp::before {
+  content: "\f437";
+  font-size: 32px;
+}
+
+.bi-linkedin::before {
+  content: "\f437";
+  font-size: 32px;
 }
