--- a/css/style.css
+++ b/css/style.css
@@ -1304,7 +1304,6 @@ body {
 }
 .py-20 {
   padding-top: 5rem;
-  padding-bottom: 5rem;
 }
 .py-21 {
   padding-top: 7rem;
@@ -2591,6 +2590,9 @@ body {
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -3065,4 +3067,9 @@ body {
 .bi-linkedin::before {
   content: "\f437";
   font-size: 32px;
+}
+
+#social {
+  vertical-align: middle;
+  justify-content: center;
 }
